--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Test sprite diffuse data (Beam.png, TreeApple.png) from the Small World sprite set http://www.lostgarden.com/2009/03/dancs-miraculously-flexible-game.html
+
+Avatar.png from http://www.lostgarden.com/2005/03/download-complete-set-of-sweet-8-bit.html
