--- a/TODO
+++ b/TODO
@@ -15,20 +15,21 @@
    3) glGetUniformBlockIndex and glBindBufferBase to bind the UBO to a particular buffer location in the shader
    
    The structure of the runtime code deserves some thought.  Currently scene objects only comprise one scene object type.  If we want sprites to also be lights, we either need a spritelight type, we need each scene object to optionally also be a light, we need some componenty thing (ugh), or a way to attach scene objects (ugh).
+[✓] Light types
+  [x] Point
+  [x] Conical
+  [x] Cylindrical (distance from line)
 [✓] Attenuation
   [x] Point
-  [ ] Conical
-  [ ] Cylindrical (distance from line)
-[ ] sprite scale
+  [x] Conical
+  [x] Cylindrical (distance from line)
+[x] sprite scale
 [x] sprite tint
 [ ] sprite asset
 [ ] Material assets
   [ ] Include normal data for SDF
-[ ] memory leaks
-[ ] shader reloading
 [x] Add member function for MaterialReserveMaterialProperties
 [ ] Add member function for vec3 for destructive operations
-[ ] Split one-time initialization like ShaderInit out of RenderInit which because it takes a render context implies it's not a singleton
 [ ] ARTIFACT: The volumetric shadow has lines in it
 [ ] ARTIFACT: Dealing with lsp embedded in occluder
 [ ] TODO: Windows port
@@ -36,18 +37,23 @@
 [x] ARTIFACT: Dealing with nearly offscreen LSP -> radial test artifacts
 [ ] Relocate asset file paths
 [ ] Hundreds of sprites
-[ ] SceneObject reference count
+[ ] SceneObject reference count.
+[ ] light prepass optimization
+[ ] shadows from multiple lights
 
 ------------------------------------------------
-PUBLISH GIT 
+PUBLISH
 ------------------------------------------------
 
+[ ] movement less jerky
+[ ] memory leaks
+[ ] shader reloading
 [ ] use explicit layout in shaders to avoid string based coupling
 [ ] Move model matrix param setting into model, out of material
 [ ] Set view/projection param once per frame (or once per camera)
 [ ] global shader parameters
 [ ] realtime SDF (CL)
-[ ] ambient parameterization
+[x] ambient parameterization
 [ ] move camera out of RenderContext and into Scene
 [ ] move SceneObject instances over to HandleAssetManager
 [ ] shader fallback when a shader can't be compiled or found
@@ -56,3 +62,4 @@ PUBLISH GIT
 [ ] GNU/Linux port
 [ ] Makefile dependency if you delete a source file (just hangs currently)
 [ ] GUIDs instead of asset paths
+[ ] Split one-time initialization like ShaderInit out of RenderInit which because it takes a render context implies it's not a singleton.  Alternatively make RenderContext a singleton.
