--- a/TODO
+++ b/TODO
@@ -33,6 +33,8 @@
   Simplest way for non-point lights would be to do attentuation in the 1d phase.
   [x] 1st: multipass
   [ ] 2nd: texture array?
+[ ] TODO: Windows port.
+    DirectX?  Not strictly necessary but would probably be more useful.  Not excited about abstracting that out though.
 [ ] light prepass optimization
 [x] Add member function for MaterialReserveMaterialProperties
 [x] Add member function for MaterialSetMaterialPropertyType
@@ -41,11 +43,10 @@
 [x] Add member function for MaterialSetMaterialPropertyTexture
 [ ] ARTIFACT: The volumetric shadow has lines in it
 [ ] ARTIFACT: Dealing with lsp embedded in occluder
-[ ] TODO: Windows port
 [x] shader preprocessing
 [x] ARTIFACT: Dealing with nearly offscreen LSP -> radial test artifacts
 [ ] Relocate asset file paths
-[ ] SceneObject reference count.
+[ ] SceneObject reference count
 [ ] sprite asset
 [ ] Material assets
   [ ] Include normal data for SDF
