Automatically size to desktop width/height.  Fix an extremely stupid bug with FromZeroOne and ToZeroOne - source parameter was never getting read.  Why did this work on OSX?  I don't believe it just appeared to. Stack must have aliased old copy.

--- a/TODO
+++ b/TODO
@@ -53,6 +53,10 @@
 [ ] Material assets
   [ ] Include normal data for SDF
 [x] ambient parameterization
+[ ] imgui layer to describe keys, toggle options like disabling lights and changing resolution
+[x] Query the default resolution to create an appropriately sized window.
+[ ] Black screen after resize
+[ ] directional lights
 
 ------------------------------------------------
 PUBLISH
