Lighting range/attenuation fixup wip
In addition to the bitmask we only process lights we have actually
submitted that frame.  This is a half-measure before storing lights in
separate sparse arrays so that we can just iterate the bits set in the
mask.

Conical lights now have their own section carved out in DrawObb.

Fixup the gl error scope function so that it propagates the file/line
information.

Increase the range on the spotlight.

Add a note to TODO so that I remember what I'm doing here.

--- a/TODO
+++ b/TODO
@@ -34,6 +34,7 @@
   [ ] 2nd: texture array?
 [✓] light prepass optimization
   [ ] Light prepass doesn't match falloff exactly, leading to sharp edge.
+  [ ] Maybe orthographic projection?
 [ ] directional light
 [x] Add member function for MaterialReserveMaterialProperties
 [x] Add member function for MaterialSetMaterialPropertyType
@@ -98,3 +99,8 @@ PUBLISH
 [ ] FIXME:
   [ ] // duplication in ToolGenerateObbFromVec3 (Tools/Utils.cpp)
 [ ] Need to spell out how the FromZeroOne functions result in non-cartesean reactions in the 1d mapping functions
+
+
+------------------------------------------------------------------
+
+Rework conical attenuation.  Calculate two ranges, along facing and parallel to.  Parallel attenuation is squared.
