--- a/TODO
+++ b/TODO
@@ -32,8 +32,9 @@
   Simplest way for non-point lights would be to do attentuation in the 1d phase.
   [x] 1st: multipass
   [ ] 2nd: texture array?
+[✓] imgui layer to describe keys, toggle options like disabling lights and changing resolution
+  [ ] Add support to toggle individual lights.  Maybe just enable one at a time.
 [ ] Rework conical attenuation.  Calculate two ranges, along facing and parallel to.  Parallel attenuation is squared.
-[ ] imgui layer to describe keys, toggle options like disabling lights and changing resolution
 [x] light prepass optimization
 [ ] directional light
 [x] Add member function for MaterialReserveMaterialProperties
