--- a/TODO
+++ b/TODO
@@ -72,7 +72,12 @@
 PUBLISH
 ------------------------------------------------
 
-[ ] shader fallback when a shader can't be compiled or found instead of crashing
+[x] Add bsphere generation into ModelClassSubset
+[x] Break ModelClass into separate management for loading
+[x] Fix JIV FIXMES (mostly related to above)
+[x] shader fallback when a shader can't be compiled or found instead of crashing
+[ ] Add bsphere for ModelClass
+[ ] Move Obb into ModelClass out of SceneObject?  Not sure about lights though
 [ ] Makefile dependency if you delete a source file (just hangs currently)
 [ ] MRT for lsp raymarch generation.
 [ ] sampler array to reduce the 1d->2d pass to one pass using multiple samplers.  Requires GL4?
@@ -112,6 +117,7 @@ PUBLISH
 ------------------------------------------------
 DISTANT FUTURE
 ------------------------------------------------
+[ ] Creating a modelclass per sprite seems extravagant.  But there's sprite-specific dimensions in the actual vertex data.  What's a better way of doing this?
 [ ] Is glLogicOp still okay method to or in light bits?
 [ ] Better method of finding eigenvectors in Obb tool
 [ ] Do we need a separate Model Po matrix?  Seems like overkill given the size and purpose of the demo.
